--- a/snappass/templates/set_password.html
+++ b/snappass/templates/set_password.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
   <section>
-    <div class="page-header"><h1>Set Secret</h1></div>
+    <div class="page-header"><h1>Создать секрет</h1></div>
     <div class="row">
       <form role="form" id="password_create" method="post" autocomplete="off">
         <div class="col-sm-6 margin-bottom-10">
@@ -15,15 +15,15 @@
 
         <div class="col-sm-2 margin-bottom-10">
           <select class="form-control" name="ttl">
-            <option value="Two Weeks">Two Weeks</option>
-            <option value="Week" selected="selected">Week</option>
-            <option value="Day">Day</option>
-            <option value="Hour">Hour</option>
+            <option value="Two Weeks">Две недели </option>
+            <option value="Week" selected="selected">Неделя</option>
+            <option value="Day">День</option>
+            <option value="Hour">Час</option>
           </select>
         </div>
 
         <div class="col-sm-4">
-          <button type="submit" class="btn btn-primary" id="submit">Generate URL</button>
+          <button type="submit" class="btn btn-primary" id="submit">Создать ссылку</button>
         </div>
       </form>
     </div>
