--- a/snappass/templates/preview.html
+++ b/snappass/templates/preview.html
@@ -6,7 +6,7 @@
     <div class="page-header">
       <h1>Secret</h1>
     </div>
-    <p class="lead">You can only reveal the secret once!</p>
+    <p class="lead">Вы сможете посмотреть сообщение только один раз!</p>
     <div class="row">
       <div class="col-sm-6 margin-bottom-10">
         <button id="revealSecret" type="button" class="btn-lg btn-primary">Reveal secret</button>
