--- a/snappass/templates/password.html
+++ b/snappass/templates/password.html
@@ -4,7 +4,7 @@
 <div class="container">
   <section>
     <div class="page-header"><h1>Secret</h1></div>
-    <p>Save the following secret to a secure location.</p>
+    <p>Сохраните сообщение в защищенное и безопасное место.</p>
     <div class="row">
       <div class="col-sm-6 margin-bottom-10">
         <textarea class="form-control" rows="10" cols="50" id="password-text" name="password-text" readonly="readonly">{{ password }}</textarea>
@@ -18,7 +18,7 @@
         </button>
       </div>
     </div>
-    <p>The secret has now been permanently deleted from the system, and the URL will no longer work. Refresh this page to verify.</p>
+    <p>Сообщение будет удалено навсегда и ссылка будет недоступна, обновите страницу, что бы  убедиться в этом.</p>
   </section>
 </div>
 {% endblock %}
