--- a/snappass/templates/confirm.html
+++ b/snappass/templates/confirm.html
@@ -4,7 +4,7 @@
 <div class="container">
   <section>
     <div class="page-header"><h1>Share Secret Link</h1></div>
-    <p>The secret has been temporarily saved. Send the following URL to your intended recipient.</p>
+    <p>Сообщение временно сохранено. Отправьте ссылку на него получателю.</p>
     <div class="row">
       <div class="col-sm-6 margin-bottom-10">
         <input type="text" class="form-control" id="password-link" value="{{ password_link }}" readonly="readonly">
