--- a/snappass/templates/base.html
+++ b/snappass/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <title>Snappass - Share Secrets</title>
     <meta charset="UTF-8">
