--- a/snappass/templates/confirm.html
+++ b/snappass/templates/confirm.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
   <section>
-    <div class="page-header"><h1>Share Secret Link</h1></div>
+    <div class="page-header"><h1>Передай ссылку на сообщение</h1></div>
     <p>Сообщение временно сохранено. Отправьте ссылку на него получателю.</p>
     <div class="row">
       <div class="col-sm-6 margin-bottom-10">
