--- a/snappass/templates/set_password.html
+++ b/snappass/templates/set_password.html
@@ -9,7 +9,7 @@
         <div class="col-sm-6 margin-bottom-10">
           <div class="input-group">
             <span class="input-group-addon" id="basic-addon1"><span class="glyphicon glyphicon-lock" aria-hidden="true"></span></span>
-            <textarea rows="10" cols="50" id="password" name="password" autofocus="true" class="form-control" placeholder="SendPAss позволяет вам безопасно передать конфиденциальные сообщения простым путем. Введите или скопируйте сообщение, настройте время хранения и нажмите "Создать ссылку!" Отправите ссылку получателю." aria-describedby="basic-addon1" autocomplete="off" required></textarea>
+            <textarea rows="10" cols="50" id="password" name="password" autofocus="true" class="form-control" placeholder="SendPAss позволяет вам безопасно передать конфиденциальные сообщения простым путем. Введите или скопируйте сообщение, настройте время хранения и нажмите ==Создать ссылку!== Отправите ссылку получателю." aria-describedby="basic-addon1" autocomplete="off" required></textarea>
           </div>
         </div>
 
@@ -30,6 +30,7 @@
   </section>
 </div>
 {% endblock %}
+ <p><strong>Внимание, используя сервис, вы соглашаетесь с условиями его использования </strong></p>
 
 {% block js %}
 {% endblock %}
