--- a/snappass/templates/base.html
+++ b/snappass/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Snappass - Share Secrets</title>
+    <title>Sendpass - передавай безопасно</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
