--- a/snappass/templates/agreement.html
+++ b/snappass/templates/agreement.html
@@ -1,1 +1,16 @@
-agreement
+{% extends "base.html" %}
+
+{% block content %}
+
+
+<p>Данный сервис предоставляется "как есть", предназначен для личного использования</p>
+<p>автор и администратор не несет ответственности за его работоспособность и не гарантирует постоянной работоспособности </p>
+<p>имейте резервную копию любых передаваемых данных, так как они не согхряняются на сервере и не могут быть восстановлены в случае технических сбоев</p>
+
+
+
+{% endblock %}
+ <p><strong>Внимание, используя сервис, вы соглашаетесь с условиями его использования </strong></p>
+
+{% block js %}
+{% endblock %}
