--- a/snappass/templates/base.html
+++ b/snappass/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Sendpass - передавай безопасно</title>
+    <title>Sendpass - передавай данные безопасно</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -13,7 +13,9 @@
     <nav class="navbar navbar-default navbar-static-top">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="/">Share Secret</a>
+          <a class="navbar-brand" href="/">Передай безопасно</a>
+          <a class="navbar-brand" href="/about">О сервисе</a>
+           <a class="navbar-brand" href="/agreement">Соглашение об использовании</a>
         </div>
       </div>
     </nav>
