--- a/snappass/templates/password.html
+++ b/snappass/templates/password.html
@@ -18,7 +18,7 @@
         </button>
       </div>
     </div>
-    <p>Сообщение будет удалено навсегда и ссылка будет недоступна, обновите страницу, что бы  убедиться в этом.</p>
+    <p>Сообщение будет удалено навсегда и ссылка теперь будет недоступна, обновите страницу, что бы  убедиться в этом.</p>
   </section>
 </div>
 {% endblock %}
