--- a/snappass/templates/about.html
+++ b/snappass/templates/about.html
@@ -1,1 +1,28 @@
-about
+{% extends "base.html" %}
+
+{% block content %}
+
+</head>
+<body>
+  <h1>О сервисе</h1>
+  <p>Данный сервис предназначен для быстрой и безопасной передачи конфиденциальных данных. </p> 
+  <p> Представьте себе, что вам нужно передать пароль от важного акаунта вашему другу. </p>
+<p>Вы можете отправить его по электронной почте.  Он останется в вашей исходящей почте, пройдет через несколько почтовых серверов, прежде чем оказаться у вашего друга. </p>
+<p> Ваша почта может быть доступна на самых разных компьютнрах, а пароль который был отправлен может быть доступен кому угодно. </p>
+<p> Можно отправить пароль мессенджером - например telegram или whatsapp - а можете ли вы быть уверены, что к телефону не получит доступ кто-то другой? </p>
+<p> При использовании сервиса sendpapss вы можете быть уверены, что сообщение будет прочитано только один раз. После открытия сообщение навсегда удаляется из нашей системы, мы не сохраняем себе никаких данных, кроме стандартных логов. </p>
+<p> Сообщение не может быть прочитано в случае, если злоумышленники взломают наш сервер - сообщение не хранится в базе данных в открытом виде и только ссылка содержит ключ для доступа к нему. </p>
+<p> Если отравленная вами ссылка будет перехвачена - злоумышленник не увидит само сообщение, а если он перейдет по ссылке и откроет сообщение, то вы узнаете об этом так как ссылка больше не откроется и вы можете не медленно сменить пароль. </p>
+<p> Никогда не сохраняйте пароли в обычных текстовых файдах на вашем компьютере. Используйте специальные менеджеры паролей для хранения важной информации. Помогите - злоумышленники могут использовать различные методы доступа к вашему компьютеру. </p>
+
+<a href="https://sendpass.mezal.ru">sendpass.ru </a>
+
+</body>
+
+</html>
+<!-- IE needs 512+ bytes: https://docs.microsoft.com/archive/blogs/ieinternals/friendly-http-error-pages -->
+{% endblock %}
+ <p><strong>Внимание, используя сервис, вы соглашаетесь с условиями его использования </strong></p>
+
+{% block js %}
+{% endblock %}
