--- a/snappass/templates/about.html
+++ b/snappass/templates/about.html
@@ -2,11 +2,12 @@
 
 {% block content %}
 
-</head>
-<body>
-  <h1>О сервисе</h1>
-  <p>Данный сервис предназначен для быстрой и безопасной передачи конфиденциальных данных. </p> 
-  <p> Представьте себе, что вам нужно передать пароль от важного акаунта вашему другу. </p>
+<div class="container">
+  <section>
+    <div class="page-header"><h1>О сервисе</h1></div>
+    <div class="row">
+<p>Данный сервис предназначен для быстрой и безопасной передачи конфиденциальных данных. </p> 
+<p> Представьте себе, что вам нужно передать пароль от важного акаунта вашему другу. </p>
 <p>Вы можете отправить его по электронной почте.  Он останется в вашей исходящей почте, пройдет через несколько почтовых серверов, прежде чем оказаться у вашего друга. </p>
 <p> Ваша почта может быть доступна на самых разных компьютерах, а пароль который был отправлен может быть доступен кому угодно. </p>
 <p> Можно отправить пароль мессенджером - например telegram или whatsapp - а можете ли вы быть уверены, что к телефону не получит доступ кто-то другой? </p>
@@ -15,13 +16,14 @@
 <p> Если отравленная вами ссылка будет перехвачена - злоумышленник не увидит само сообщение, а если он перейдет по ссылке и откроет сообщение, то вы узнаете об этом так как ссылка больше не откроется и вы можете не медленно сменить пароль. </p>
 <p> Никогда не сохраняйте пароли в обычных текстовых файдах на вашем компьютере. Используйте специальные менеджеры паролей для хранения важной информации. Помните - злоумышленники могут использовать различные методы доступа к вашему компьютеру. </p>
 
-<a> href="https://sendpass.mezal.ru">sendpass.ru </a>
-  
-<p><strong>Внимание, используя сервис, вы соглашаетесь с условиями его использования</strong></p>
-
-</body>
-
-</html>
+        <div class="col-sm-4">
+           <a  class="page-header" href="https://sendpass.mezal.ru">sendpass.ru</a>
+           <p><strong>Внимание, используя сервис, вы соглашаетесь с условиями его использования</strong></p>
+        </div>
+      </form>
+    </div>
+  </section>
+</div>
 <!-- IE needs 512+ bytes: https://docs.microsoft.com/archive/blogs/ieinternals/friendly-http-error-pages -->
 {% endblock %}
 
