--- a/snappass/templates/about.html
+++ b/snappass/templates/about.html
@@ -5,7 +5,9 @@
 <div class="container">
   <section>
     <div class="page-header"><h1>О сервисе</h1></div>
-    <div class="row">
+    <div class="col-sm-4">
+Данный сервис предназначен для быстрой и безопасной передачи конфиденциальных данных.
+
 <p>Данный сервис предназначен для быстрой и безопасной передачи конфиденциальных данных. </p> 
 <p> Представьте себе, что вам нужно передать пароль от важного акаунта вашему другу. </p>
 <p>Вы можете отправить его по электронной почте.  Он останется в вашей исходящей почте, пройдет через несколько почтовых серверов, прежде чем оказаться у вашего друга. </p>
@@ -15,13 +17,19 @@
 <p> Сообщение не может быть прочитано в случае, если злоумышленники взломают наш сервер - сообщение не хранится в базе данных в открытом виде и только ссылка содержит ключ для доступа к нему. </p>
 <p> Если отравленная вами ссылка будет перехвачена - злоумышленник не увидит само сообщение, а если он перейдет по ссылке и откроет сообщение, то вы узнаете об этом так как ссылка больше не откроется и вы можете не медленно сменить пароль. </p>
 <p> Никогда не сохраняйте пароли в обычных текстовых файдах на вашем компьютере. Используйте специальные менеджеры паролей для хранения важной информации. Помните - злоумышленники могут использовать различные методы доступа к вашему компьютеру. </p>
+    </div>
 
-        <div class="col-sm-4">
+
+    <div class="col-sm-4">
            <a  class="page-header" href="https://sendpass.mezal.ru">sendpass.ru</a>
            <p><strong>Внимание, используя сервис, вы соглашаетесь с условиями его использования</strong></p>
-        </div>
-      </form>
     </div>
+
+
+
+
+
+     
   </section>
 </div>
 <!-- IE needs 512+ bytes: https://docs.microsoft.com/archive/blogs/ieinternals/friendly-http-error-pages -->
