--- a/snappass/templates/agreement.html
+++ b/snappass/templates/agreement.html
@@ -5,20 +5,16 @@
 <div class="container">
   <section>
     <div class="page-header"><h1>Условия использования</h1></div>
-    <div class="row">
-
+    <div class="col-sm-4">
 <p>Данный сервис предоставляется "как есть", предназначен для личного использования</p>
 <p>автор и администратор не несет ответственности за его работоспособность и не гарантирует постоянной работоспособности </p>
 <p>имейте резервную копию любых передаваемых данных, так как они не согхряняются на сервере и не могут быть восстановлены в случае технических сбоев</p>
 <p>Сервер собирает и обрабатывает стандартные логи - IP адрес и параметры браузера</p>
-
-
+</div>
         <div class="col-sm-4">
            <a  class="page-header" href="https://sendpass.mezal.ru">sendpass.ru</a>
            <p><strong>Внимание, используя сервис, вы соглашаетесь с условиями его использования</strong></p>
         </div>
-      </form>
-    </div>
   </section>
 </div>
 <!-- IE needs 512+ bytes: https://docs.microsoft.com/archive/blogs/ieinternals/friendly-http-error-pages -->
