some update html

--- a/snappass/templates/about.html
+++ b/snappass/templates/about.html
@@ -1,37 +1,50 @@
 {% extends "base.html" %}
-
 {% block content %}
 
+<!doctype html>
+<html lang="ru">
+  <head>
+    <!-- Обязательные метатеги -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+
+    <title>Sendpass.ru - о сервисе</title>
+  </head>
+  <body>
 <div class="container">
   <section>
     <div class="page-header"><h1>О сервисе</h1></div>
-    <div class="col-sm-4">
-Данный сервис предназначен для быстрой и безопасной передачи конфиденциальных данных.
-
-<p>Данный сервис предназначен для быстрой и безопасной передачи конфиденциальных данных. </p> 
+    <div class="col-sm-10">
+<h2>Данный сервис предназначен для быстрой и безопасной передачи конфиденциальных данных.</h2> 
 <p> Представьте себе, что вам нужно передать пароль от важного акаунта вашему другу. </p>
-<p>Вы можете отправить его по электронной почте.  Он останется в вашей исходящей почте, пройдет через несколько почтовых серверов, прежде чем оказаться у вашего друга. </p>
-<p> Ваша почта может быть доступна на самых разных компьютерах, а пароль который был отправлен может быть доступен кому угодно. </p>
+<p>Вы можете отправить его по электронной почте.  Он останется в вашей исходящей почте, пройдет через несколько почтовых серверов, прежде чем оказаться у вашего друга. Ваша почта может быть доступна на самых разных компьютерах, а пароль который был отправлен может быть доступен кому угодно. </p>
 <p> Можно отправить пароль мессенджером - например telegram или whatsapp - а можете ли вы быть уверены, что к телефону не получит доступ кто-то другой? </p>
-<p> При использовании сервиса sendpapss вы можете быть уверены, что сообщение будет прочитано только один раз. После открытия сообщение навсегда удаляется из нашей системы, мы не сохраняем себе никаких данных, кроме стандартных логов. </p>
+<p> При использовании сервиса <a href="https://sendpаss.ru">sendpass.ru</a> вы можете быть уверены, что сообщение будет прочитано только один раз. После открытия сообщение навсегда удаляется из нашей системы, мы не сохраняем себе никаких данных, кроме стандартных логов. </p>
 <p> Сообщение не может быть прочитано в случае, если злоумышленники взломают наш сервер - сообщение не хранится в базе данных в открытом виде и только ссылка содержит ключ для доступа к нему. </p>
-<p> Если отравленная вами ссылка будет перехвачена - злоумышленник не увидит само сообщение, а если он перейдет по ссылке и откроет сообщение, то вы узнаете об этом так как ссылка больше не откроется и вы можете не медленно сменить пароль. </p>
+<p> Если отправленная вами ссылка будет перехвачена, то злоумышленник не увидит само сообщение, а если он перейдет по ссылке и откроет сообщение, то вы узнаете об этом так как ссылка больше не откроется и вы можете не медленно сменить пароль. </p>
 <p> Никогда не сохраняйте пароли в обычных текстовых файдах на вашем компьютере. Используйте специальные менеджеры паролей для хранения важной информации. Помните - злоумышленники могут использовать различные методы доступа к вашему компьютеру. </p>
     </div>
 
-
-    <div class="col-sm-4">
-           <a  class="page-header" href="https://sendpass.mezal.ru">sendpass.ru</a>
-           <p><strong>Внимание, используя сервис, вы соглашаетесь с условиями его использования</strong></p>
+    <div class="col-sm-10">
+     <p> </p>
+     <p><strong>Внимание, используя сервис, вы соглашаетесь с условиями его использования</strong></p>
+     <p> </p>
+        <a class="btn btn-primary" href="https://sendpass.ru" role="button">Sendpass.ru</a>
+       
     </div>
-
-
-
-
-
      
   </section>
 </div>
+
+    <!-- Вариант 1: Bootstrap в связке с Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+    
+  </body>
+</html>
+
 <!-- IE needs 512+ bytes: https://docs.microsoft.com/archive/blogs/ieinternals/friendly-http-error-pages -->
 {% endblock %}
 
