--- a/snappass/templates/set_password.html
+++ b/snappass/templates/set_password.html
@@ -9,7 +9,7 @@
         <div class="col-sm-6 margin-bottom-10">
           <div class="input-group">
             <span class="input-group-addon" id="basic-addon1"><span class="glyphicon glyphicon-lock" aria-hidden="true"></span></span>
-            <textarea rows="10" cols="50" id="password" name="password" autofocus="true" class="form-control" placeholder="SendPAss позволяет вам безопасно передать конфиденциальные сообщения простым путем. Введите или скопируйте сообщение, настройте время хранения и нажмите ==Создать ссылку!== <p>Отправьте ссылку получателю любым удобным способом.</p>" aria-describedby="basic-addon1" autocomplete="off" required></textarea>
+            <textarea rows="10" cols="50" id="password" name="password" autofocus="true" class="form-control" placeholder="SendPass позволяет вам безопасно передать конфиденциальные данные простым, но безопасным путем. Введите или скопируйте сообщение, настройте время хранения и нажмите кнопку Создать ссылку! Отправьте ссылку получателю любым удобным способом" aria-describedby="basic-addon1" autocomplete="off" required></textarea>
           </div>
         </div>
 
