--- a/snappass/templates/set_password.html
+++ b/snappass/templates/set_password.html
@@ -16,9 +16,9 @@
         <div class="col-sm-2 margin-bottom-10">
           <select class="form-control" name="ttl">
             <option value="Two Weeks">Две недели </option>
-            <option value="Week" selected="selected">Неделя</option>
+            <option value="Week" >Неделя</option>
             <option value="Day">День</option>
-            <option value="Hour">Час</option>
+            <option value="Hour" selected="selected">Час</option>
           </select>
         </div>
 
