--- a/snappass/templates/base.html
+++ b/snappass/templates/base.html
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-default navbar-static-top">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="/">Передай безопасно</a>
+          <a class="navbar-brand" href="/">Sendpass.ru</a>
           <a class="navbar-brand" href="/about">О сервисе</a>
            <a class="navbar-brand" href="/agreement">Соглашение об использовании</a>
         </div>
