add update to bootstrap

--- a/snappass/templates/404.html
+++ b/snappass/templates/404.html
@@ -56,6 +56,7 @@
 <body>
   <h1>Страница не существует</h1>
   <p>Извините, но такая страница не существует.</p>
+  <p><a href="https://sendpass.ru">sendpass.ru</a></p>
 </body>
 
 </html>
