--- a/snappass/templates/base.html
+++ b/snappass/templates/base.html
@@ -1,28 +1,49 @@
+
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Sendpass - передавай данные безопасно</title>
-    <meta charset="UTF-8">
+    <!-- Обязательные метатеги -->
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link href="{{ config.STATIC_URL }}/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="{{ config.STATIC_URL }}/fontawesome/css/font-awesome.min.css?v=4.7.0" rel="stylesheet">
-    <link href="{{ config.STATIC_URL }}/snappass/css/custom.css" rel="stylesheet">
-  </head>
-  <body>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+
+    <title>Sendpass - передавай данные безопасно</title>
     <nav class="navbar navbar-default navbar-static-top">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="/">Sendpass.ru</a>
+          <a class="navbar-brand" href="/">sendpass.ru</a>
           <a class="navbar-brand" href="/about">О сервисе</a>
            <a class="navbar-brand" href="/agreement">Соглашение об использовании</a>
         </div>
       </div>
     </nav>
+  </head>
 
-    {% block content %}{% endblock %}
-    <script src="{{ config.STATIC_URL }}/jquery/jquery-1.12.4.min.js"></script>
-    <script src="{{ config.STATIC_URL }}/bootstrap/js/bootstrap.min.js"></script>
-    {% block js %}{% endblock %}
+  <body>
+       {% block content %}
+       {% endblock %}
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+   
+    {% block js %}
+    
+    <!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+   ym(80810887, "init", {
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true
+   });
+     </script>
+<noscript><div><img src="https://mc.yandex.ru/watch/80810887" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
+    
+    {% endblock %}
   </body>
 </html>
