--- a/snappass/templates/base.html
+++ b/snappass/templates/base.html
@@ -10,12 +10,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
     <title>Sendpass - передавай данные безопасно</title>
-    <nav class="navbar navbar-default navbar-static-top">
+    <nav class="nnavbar navbar-dark bg-primary">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="/">sendpass.ru</a>
+          <a class="navbar-brand" href="/">Sendpass.ru</a>
           <a class="navbar-brand" href="/about">О сервисе</a>
-           <a class="navbar-brand" href="/agreement">Соглашение об использовании</a>
+           <a class="navbar-brand" href="/agreement">Соглашение</a>
         </div>
       </div>
     </nav>
