add update to bootstrap

--- a/snappass/templates/set_password.html
+++ b/snappass/templates/set_password.html
@@ -3,8 +3,9 @@
 {% block content %}
 <div class="container">
   <section>
-    <div class="page-header"><h1>Создать секрет</h1></div>
+    <div class="page-header"><h1>Создать конфиденциальное сообщение</h1></div>
     <div class="row">
+     <p>Тест сообщения</p> 
       <form role="form" id="password_create" method="post" autocomplete="off">
         <div class="col-sm-6 margin-bottom-10">
           <div class="input-group">
@@ -12,8 +13,10 @@
             <textarea rows="10" cols="50" id="password" name="password" autofocus="true" class="form-control" placeholder="SendPass позволяет вам безопасно передать конфиденциальные данные простым, но безопасным путем. Введите или скопируйте сообщение, настройте время хранения и нажмите кнопку Создать ссылку! Отправьте ссылку получателю любым удобным способом" aria-describedby="basic-addon1" autocomplete="off" required></textarea>
           </div>
         </div>
-
+        
         <div class="col-sm-2 margin-bottom-10">
+           <p>Срок хранения</p>
+           <p></p>   
           <select class="form-control" name="ttl">
             <option value="Two Weeks">Две недели </option>
             <option value="Week" >Неделя</option>
