--- a/snappass/templates/confirm.html
+++ b/snappass/templates/confirm.html
@@ -11,10 +11,10 @@
       </div>
 
       <div class="col-sm-6">
-        <button title="Copy to clipboard" type="button" class="btn btn-primary copy-clipboard-btn"
+        <button title="Copy to clipboard" type="button" class="bi bi-clipboard"
               id="copy-clipboard-btn" data-clipboard-target="#password-link"
               data-placement='bottom'>
-          <i class="fa fa-clipboard"></i>
+          <i class="bi bi-clipboard"></i>
         </button>
       </div>
     </div>
