add update to bootstrap

--- a/snappass/templates/password.html
+++ b/snappass/templates/password.html
@@ -11,7 +11,7 @@
       </div>
 
       <div class="col-sm-6">
-        <button title="Copy to clipboard" type="button" class="btn btn-primary copy-clipboard-btn"
+        <button title="Copy to clipboard" type="button" class="btn copy-clipboard-btn"
               id="copy-clipboard-btn" data-clipboard-target="#password-text"
               data-placement='bottom'>
           <i class="fa fa-clipboard"></i>
