--- a/snappass/templates/confirm.html
+++ b/snappass/templates/confirm.html
@@ -11,10 +11,9 @@
       </div>
 
       <div class="col-sm-6">
-        <button title="Copy to clipboard" type="button" class="bi bi-clipboard"
+        <button title="Copy to clipboard" type="button" class="btn copy-clipboard-btn"
               id="copy-clipboard-btn" data-clipboard-target="#password-link"
-              data-placement='bottom'>
-          <i class="bi bi-clipboard"></i>
+              data-placement='bottom' >
         </button>
       </div>
     </div>
