add update to bootstrap

--- a/snappass/templates/confirm.html
+++ b/snappass/templates/confirm.html
@@ -11,9 +11,9 @@
       </div>
 
       <div class="col-sm-6">
-        <button title="Copy to clipboard" type="button" class="btn copy-clipboard-btn"
+        <button title="Copy to clipboard" type="button" class="copy-clipboard-btn"
               id="copy-clipboard-btn" data-clipboard-target="#password-link"
-              data-placement='bottom' >
+              data-placement='bottom'>
         </button>
       </div>
     </div>
