add update to bootstrap

--- a/snappass/templates/confirm.html
+++ b/snappass/templates/confirm.html
@@ -11,7 +11,7 @@
       </div>
 
       <div class="col-sm-6">
-        <button title="Copy to clipboard" type="button" class="copy-clipboard-btn"
+        <button title="Скопировать в буфер" type="button" class="btn btn-primary"
               id="copy-clipboard-btn" data-clipboard-target="#password-link"
               data-placement='bottom'>
         </button>
