--- a/snappass/templates/confirm.html
+++ b/snappass/templates/confirm.html
@@ -11,9 +11,10 @@
       </div>
 
       <div class="col-sm-6">
-        <button title="Скопировать в буфер" type="button" class="btn btn-primary"
+        <button title="Скопировать в буфер" type="button" class="btn-lg btn-primary"
               id="copy-clipboard-btn" data-clipboard-target="#password-link"
               data-placement='bottom'>
+              <i class="fa fa-clipboard"></i>
         </button>
       </div>
     </div>
