--- a/snappass/templates/preview.html
+++ b/snappass/templates/preview.html
@@ -4,7 +4,7 @@
 <div class="container">
   <section>
     <div class="page-header">
-      <h1>Secret</h1>
+      <h1>Полученное сообщение</h1>
     </div>
     <p class="lead">Вы сможете посмотреть сообщение только один раз!</p>
     <div class="row">
