--- a/snappass/templates/base.html
+++ b/snappass/templates/base.html
@@ -22,15 +22,10 @@
   </head>
 
   <body>
-       {% block content %}
-       {% endblock %}
-
+       {% block content %}{% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-   
-    {% block js %}
-    
-    <!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
+    <script src="{{ config.STATIC_URL }}/jquery/jquery-1.12.4.min.js"></script>
+    <script type="text/javascript" >
    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
    m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
@@ -43,6 +38,10 @@
      </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/80810887" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
+    {% block js %}
+    
+    <!-- Yandex.Metrika counter -->
+
     
     {% endblock %}
   </body>
