--- a/snappass/templates/confirm.html
+++ b/snappass/templates/confirm.html
@@ -14,8 +14,7 @@
         <button title="Copy to clipboard" type="button" class="btn copy-clipboard-btn"
               id="copy-clipboard-btn" data-clipboard-target="#password-link"
               data-placement='bottom'>
-          <i class="fa fa-clipboard"></i>
-        </button>
+          <i class="fa fa-clipboard"></i>Копировать  буфер</button>
       </div>
     </div>
   </section>
