--- a/snappass/templates/confirm.html
+++ b/snappass/templates/confirm.html
@@ -11,10 +11,9 @@
       </div>
 
       <div class="col-sm-6">
-        <button title="Copy to clipboard" type="button" class="btn copy-clipboard-btn"
+        <button title="Copy to clipboard" type="button" class="btn btn-primary"
               id="copy-clipboard-btn" data-clipboard-target="#password-link"
-              data-placement='bottom'>
-          <i class="fa fa-clipboard"></i>Копировать  буфер</button>
+              data-placement='bottom'></i>Копировать в буфер</button>
       </div>
     </div>
   </section>
