add update to bootstrap

--- a/snappass/templates/password.html
+++ b/snappass/templates/password.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
   <section>
-    <div class="page-header"><h1>Secret</h1></div>
+    <div class="page-header"><h1>Сообщение</h1></div>
     <p>Сохраните сообщение в защищенное и безопасное место.</p>
     <div class="row">
       <div class="col-sm-6 margin-bottom-10">
@@ -11,11 +11,8 @@
       </div>
 
       <div class="col-sm-6">
-        <button title="Copy to clipboard" type="button" class="btn copy-clipboard-btn"
-              id="copy-clipboard-btn" data-clipboard-target="#password-text"
-              data-placement='bottom'>
-          <i class="fa fa-clipboard"></i>
-        </button>
+           <button type="button" class="btn btn-primary" id="copy-clipboard-btn" data-placement='bottom' data-clipboard-target="#password-text"
+           >копировать в буфер</button>
       </div>
     </div>
     <p>Сообщение будет удалено навсегда и ссылка теперь будет недоступна, обновите страницу, что бы  убедиться в этом.</p>
