--- a/snappass/templates/set_password.html
+++ b/snappass/templates/set_password.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
   <section>
-    <div class="page-header"><h1>Создать конфиденциальное сообщение</h1></div>
+    <div class="page-header"><h1>Создать сообщение</h1></div>
     <div class="row">
      <p>Тест сообщения</p> 
       <form role="form" id="password_create" method="post" autocomplete="off">
@@ -25,16 +25,25 @@
           </select>
         </div>
 
+
+
+    {{ recaptcha }}          
+
         <div class="col-sm-4">
         <p></p> 
           <button type="submit" class="btn btn-primary" id="submit">Создать ссылку</button>
         </div>
       </form>
     </div>
+    
+    <p><strong>Внимание, используя сервис, вы соглашаетесь с условиями его использования </strong></p>
+
+
   </section>
 </div>
 {% endblock %}
- <p><strong>Внимание, используя сервис, вы соглашаетесь с условиями его использования </strong></p>
+
 
 {% block js %}
+<script src='https://www.google.com/recaptcha/api.js'></script>
 {% endblock %}
