--- a/snappass/templates/base.html
+++ b/snappass/templates/base.html
@@ -24,7 +24,7 @@
   <body>
        {% block content %}{% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
-    <script src="{{ config.STATIC_URL }}/jquery/jquery-1.12.4.min.js"></script>
+    <script src="{{ config.STATIC_URL }}/jquery/jquery-3.6.0.slim.min.js"></script>
     <script type="text/javascript" >
    (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
    m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
@@ -41,8 +41,10 @@
     {% block js %}
     
     <!-- Yandex.Metrika counter -->
-
     
     {% endblock %}
   </body>
+
+
+
 </html>
