some minor updates

--- a/snappass/templates/agreement.html
+++ b/snappass/templates/agreement.html
@@ -17,13 +17,16 @@
 <div class="container">
   <section>
     <div class="page-header"><h1>Условия использования</h1></div>
-    <div class="col-sm-10">
-<p>Данный сервис предоставляется "как есть", предназначен для личного использования.</p>
-<p>автор и администратор не несет ответственности за его работоспособность и не гарантирует постоянной работоспособности.</p>
-<p>имейте резервную копию любых передаваемых данных, так как они не сохраняются на сервере и не могут быть восстановлены в случае технических сбоев.</p>
-<p>Сервер собирает и обрабатывает стандартные логи - IP адрес и параметры браузера, так же собираются метрики Yandex.</p>
-<p>Все базовые и необходимые настройки безопасности сервера выполнены, но это не означает, что уязвимостей со 100% вероятностью нет.</p>
-<p> Сервис создан на базе https://github.com/pinterest/snappas и содержит минимальные изменения в основном связанные с русификацией.<p>
+    <div class="col-sm-9">
+<li>Данный сервис предоставляется "как есть", предназначен для личного использования.</li>
+<li>автор и администратор не несет ответственности за его работоспособность и не гарантирует постоянной работоспособности.</li>
+<li>имейте резервную копию любых передаваемых данных, так как они не сохраняются на сервере и не могут быть восстановлены в случае технических сбоев.</li>
+<li>Сервер собирает и обрабатывает стандартные логи - IP адрес и параметры браузера, так же собираются метрики Yandex.</li>
+<li>Все базовые и необходимые настройки безопасности сервера выполнены, но это не означает, что уязвимостей со 100% вероятностью нет.</li>
+<li> Сервис является форком <a href="https://github.com/pinterest/snappas">snappass</a>, и сдержит ряд отличий от него:
+ обновлен jquery до версии 3.6.0 и Bootstrap, добавлена  reCapcha, разделы о сервисе и пользовательское соглашение.</li>
+ <li> Публичный репозиторий проекта <a href="https://github.com/f022b/snappass">snapass<a></li> 
+
 </div>
 
     <div class="col-sm-10">
