--- a/snappass/templates/set_password.html
+++ b/snappass/templates/set_password.html
@@ -10,7 +10,7 @@
         <div class="col-sm-6 margin-bottom-10">
           <div class="input-group">
             <span class="input-group-addon" id="basic-addon1"><span class="glyphicon glyphicon-lock" aria-hidden="true"></span></span>
-            <textarea rows="10" cols="50" id="password" name="password" autofocus="true" class="form-control" placeholder="SendPass позволяет вам безопасно передать конфиденциальные данные простым, но безопасным путем. Введите или скопируйте сообщение, настройте время хранения и нажмите кнопку Создать ссылку! Отправьте ссылку получателю любым удобным способом" aria-describedby="basic-addon1" autocomplete="off" required></textarea>
+            <textarea rows="10" cols="50" id="password" name="password" autofocus="true" class="form-control" placeholder="SendPass позволяет вам безопасно передать конфиденциальные данные простым и легким путем. Введите или скопируйте данные, которые необходимо переслать, настройте время хранения (время действия ссылки) и нажмите кнопку Создать ссылку. Отправьте ссылку получателю любым удобным способом" aria-describedby="basic-addon1" autocomplete="off" required></textarea>
           </div>
         </div>
         <p></p> 
@@ -26,8 +26,9 @@
         </div>
 
 
-
-    {{ recaptcha }}          
+    <p></p>
+    {{ recaptcha }}    
+    <p></p>      
 
         <div class="col-sm-4">
         <p></p> 
@@ -37,7 +38,6 @@
     </div>
     
     <p><strong>Внимание, используя сервис, вы соглашаетесь с условиями его использования </strong></p>
-
 
   </section>
 </div>
