--- a/snappass/templates/preview.html
+++ b/snappass/templates/preview.html
@@ -9,7 +9,7 @@
     <p class="lead">Вы сможете посмотреть сообщение только один раз!</p>
     <div class="row">
       <div class="col-sm-6 margin-bottom-10">
-        <button id="revealSecret" type="button" class="btn-lg btn-primary">Открыть сообщение</button>
+        <button id="revealSecret" type="button" class="btn btn-primary">Открыть сообщение</button>
       </div>
     </div>
   </section>
